Descrizione delle modifiche effettuate

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Gianni is Ready</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
@@ -43,4 +43,4 @@
             app.initialize();
         </script>
     </body>
-</html>
+    </html>
